@@ -13,6 +13,7 @@ Added:
   - lisp-mode: on TAB hit show possible completions (or indent line).
 
 Changed:
+  - Disable beginner-friendly scrolling settings.
   - Frames default width slightly balanced.
   - Use package exec-path-from-shell to load user's shell environment variables.
   - markdown-mode: use multimarkdown parser (if available).
